src/objects/Apttus_Config2__PriceDimension__c.object
<CustomObject>
    <description>Represents a price criteria dimension</description>
    <fields>
        <fullName>Apttus_Config2__AttributeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product attribute which provides the value for the dimension.</description>
        <label>Attribute</label>
        <referenceTo>Apttus_Config2__ProductAttribute__c</referenceTo>
        <relationshipLabel>Price Dimensions</relationshipLabel>
        <relationshipName>PriceDimensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BusinessObject__c</fullName>
        <description>The business object which provides the context for the dimension</description>
        <label>Business Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apttus_Config2__LineItem__c</fullName>
                    <default>true</default>
                    <label>Apttus_Config2__LineItem__c</label>
                </value>
                <value>
                    <fullName>Apttus_Config2__OrderLineItem__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__ExternalOrderSummaryItem__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChildFilterName__c</fullName>
        <description>The name of the child filter associated with the price dimension</description>
        <inlineHelpText>The name of the child filter associated with the price dimension</inlineHelpText>
        <label>Child Filter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContextType__c</fullName>
        <description>The type of context associated with the dimension</description>
        <label>Context Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Line Item</fullName>
                </value>
                <value>
                    <fullName>Order Line Item</fullName>
                </value>
                <value>
                    <fullName>Product Attribute</fullName>
                </value>
                <value>
                    <fullName>Formula Field</fullName>
                </value>
                <value>
                    <fullName>Order Formula Field</fullName>
                </value>
                <value>
                    <fullName>Child Filter</fullName>
                </value>
                <value>
                    <fullName>Order Child Filter</fullName>
                </value>
                <value>
                    <fullName>External Order Summary Item</fullName>
                </value>
                <value>
                    <fullName>External Order Formula Field</fullName>
                </value>
                <value>
                    <fullName>External Order Child Filter</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CumulativeDimensionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the cumulative dimension associated with the dimension. Only applicable to numeric dimensions</description>
        <label>Cumulative Dimension</label>
        <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
        <relationshipLabel>Related Dimensions</relationshipLabel>
        <relationshipName>RelatedDimensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Datasource__c</fullName>
        <description>The data source which provides the value for the dimension.</description>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The description for the dimension</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated incentive</description>
        <inlineHelpText>ID of the associated incentive</inlineHelpText>
        <label>Incentive</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Price Dimensions</relationshipLabel>
        <relationshipName>PriceDimensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelationType__c</fullName>
        <description>The relation type</description>
        <label>Relation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Related Quantity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Type__c</fullName>
        <description>The dimension type</description>
        <inlineHelpText>The dimension type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Quantity</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Price Dimension</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Config2__ContextType__c</columns>
        <columns>Apttus_Config2__BusinessObject__c</columns>
        <columns>Apttus_Config2__Datasource__c</columns>
        <columns>Apttus_Config2__Description__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Apttus_Config2__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dimension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Dimensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>